--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
         env:
           GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
           
+      - name: Create .nojekyll file
+        run: touch out/.nojekyll
+          
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
